# augmented-neuromuscular-RT-running

./: .gitignore  LICENSE  README.md
dataR/: coman_flex_feet.mbs  (+6 more)
mbsysCopy/cmake_aux/flags/: CMakeLists.txt
mbsysCopy/mbs_common/: CMakeLists.txt
mbsysCopy/mbs_common/mbs_add_on/tyreGround/: mbs_bakker.c  mbs_kine_wheel.c
mbsysCopy/mbs_common/mbs_load_xml/: CMakeLists.txt  mbs_load_xml.c  mbs_load_xml.h  mbs_xml_reader.c  mbs_xml_reader.h
mbsysCopy/mbs_common/mbs_module/: CMakeLists.txt  MBSfun.h  mbs_close_loops.c  mbs_dirdyn.c  mbs_dirdyn.h  mbs_dirdynared.c  mbs_equil.c  mbs_equil.h  mbs_modal.c  mbs_modal.h  mbs_part.c  mbs_part.h  mbs_project_interface.h
mbsysCopy/mbs_common/mbs_numerics/: CMakeLists.txt  choldc.c  cholsl.c  dopri5.c  integrator.h  lubksb.c  ludcmp.c  nrfct.h  nrutil.c  svbksb.c  svdcmp.c
mbsysCopy/mbs_common/mbs_realtime/: CMakeLists.txt  user_realtime.h  user_realtime_visu.h
mbsysCopy/mbs_common/mbs_realtime/java/: java_functions.c  java_functions.h  visu_past.c
mbsysCopy/mbs_common/mbs_realtime/realtime/: realtime.c  realtime.h  realtime_ext.c  realtime_ext.h  time_functions.c  time_functions.h
mbsysCopy/mbs_common/mbs_realtime/sdl/: events_sdl.c  plot_sdl.c  plot_sdl.h
mbsysCopy/mbs_common/mbs_struct/: CMakeLists.txt  equil_strct.h  mbs_aux.c  mbs_aux.h  mbs_data.c  mbs_data.h  mbs_dirdyn_struct.h  mbs_sensor.h  mbs_user_interface.h
mbsysCopy/mbs_common/mbs_utilities/: CMakeLists.txt  lut.c  lut.h  mbs_buffer.c  mbs_buffer.h  mbs_set.c  mbs_set.h  mbs_tool.c  mbs_tool.h  norm.c  useful_functions.c  useful_functions.h  write_files.c
mbsysCopy/mbs_common/mbs_utilities/auto_output/: set_output.h
mbsysCopy/mbs_common/mbs_void_symbolicR/: mbs_link3D_void.c
resultsR/speed_track/animation/: CMakeLists.txt
resultsR/speed_track/animation/animationR/: Readme.txt
resultsR/speed_track/animation/dataR/: coman.mbs  coman_spring_toe_short_feet.mbs
resultsR/speed_track/animation/src/: main.cc
workR/: CMakeLists.txt
workR/Optis/best_cpg_opti_hfl/hfl2.1_res_1200/: OptiResults.cc  out_norm.txt
workR/Optis/best_cpg_opti_hfl/hfl2.1_res_1297/: OptiResults.cc  out_norm.txt
workR/Optis/best_cpg_opti_hfl/hfl2_res_1274/: OptiResults.cc  out_norm.txt
workR/Optis/best_cpg_opti_hfl/hfl2_res_1367/: OptiResults.cc  out_norm.txt
workR/Optis/best_cpg_opti_hfl/hfl3_res_1067/: OptiResults.cc  out_norm.txt
workR/Optis/best_cpg_opti_hfl/hfl3_res_1465/: OptiResults.cc  out_norm.txt
workR/Optis/best_cpg_opti_hfl/ly_1_1085/: OptiResults.cc  out_norm.txt
workR/Optis/best_cpg_opti_hfl/ly_2_1084/: OptiResults.cc  out_norm.txt
workR/Optis/best_cpg_opti_hfl/ty_2_1241/: OptiResults.cc  out_norm.txt
workR/Optis/best_cpg_opti_hfl/ty_4_1036/: OptiResults.cc  out_norm.txt
workR/Optis/best_opti/: out_norm.txt
workR/Optis_2.0/: AllData.py  f-test.py  plotting.py  run_params.py
workR/Optis_2.0/1.35kk1/: OptiResults.cc
workR/Optis_2.0/1.35kk2/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/1.35kk5/: OptiResults.cc
workR/Optis_2.0/1.3kk1/: OptiResults.cc
workR/Optis_2.0/1.3kk3/: OptiResults.cc
workR/Optis_2.0/1.3kk4/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/1.3kk5/: OptiResults.cc
workR/Optis_2.0/1.45kk2/: out_norm.txt
workR/Optis_2.0/1.45kk3/: out_norm.txt
workR/Optis_2.0/1.45kk4/: OptiResults.cc
workR/Optis_2.0/1.45kk5/: OptiResults.cc
workR/Optis_2.0/1.4kk1/: out_norm.txt
workR/Optis_2.0/1.4kk3/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/1.4kk4/: OptiResults.cc
workR/Optis_2.0/1.4kk5/: OptiResults.cc
workR/Optis_2.0/1.55kk1/: out_norm.txt
workR/Optis_2.0/1.55kk2/: out_norm.txt
workR/Optis_2.0/1.55kk3/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/1.55kk4/: OptiResults.cc
workR/Optis_2.0/1.55kk5/: OptiResults.cc
workR/Optis_2.0/1.5kk2/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/1.5kk3/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/1.5kk4/: OptiResults.cc
workR/Optis_2.0/1.5kk5/: OptiResults.cc
workR/Optis_2.0/1.65kk1/: out_norm.txt
workR/Optis_2.0/1.65kk2/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/1.65kk4/: OptiResults.cc
workR/Optis_2.0/1.65kk5/: OptiResults.cc
workR/Optis_2.0/1.6kk1/: OptiResults.cc
workR/Optis_2.0/1.6kk3/: OptiResults.cc
workR/Optis_2.0/1.6kk4/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/1.6kk5/: OptiResults.cc
workR/Optis_2.0/1.7kk4/: OptiResults.cc
workR/Optis_2.0/1.7kk5/: OptiResults.cc
workR/Optis_2.0/4-mixed_results/: 4-mixed-dict.txt
workR/Optis_2.0/backup/1.3kk1/: OptiResults.cc
workR/Optis_2.0/backup/1.3kk2/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/backup/1.4kk1/: OptiResults.cc
workR/Optis_2.0/backup/1.4kk2/: out_norm.txt
workR/Optis_2.0/backup/1.6kk1/: out_norm.txt
workR/Optis_2.0/backup/2-trial_results/: 2-trialdict.txt  regr.txt
workR/Optis_2.0/backup2.0/: dict.txt  plotting.py
workR/Optis_2.0/backup2.0/1.35kk3/: OptiResults.cc
workR/Optis_2.0/backup2.0/1.35kk4/: OptiResults.cc
workR/Optis_2.0/backup2.0/1.3kk1/: out_norm.txt
workR/Optis_2.0/backup2.0/1.3kk2/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/backup2.0/1.3kk3/: out_norm.txt
workR/Optis_2.0/backup2.0/1.45kk1/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/backup2.0/1.45kk2/: OptiResults.cc
workR/Optis_2.0/backup2.0/1.45kk3/: OptiResults.cc
workR/Optis_2.0/backup2.0/1.4kk2/: OptiResults.cc
workR/Optis_2.0/backup2.0/1.4kk4/: out_norm.txt
workR/Optis_2.0/backup2.0/1.55kk1/: OptiResults.cc
workR/Optis_2.0/backup2.0/1.55kk2/: OptiResults.cc
workR/Optis_2.0/backup2.0/1.5kk1/: OptiResults.cc  out_norm.txt
workR/Optis_2.0/backup2.0/1.5kk4/: out_norm.txt
workR/Optis_2.0/backup2.0/1.65kk1/: OptiResults.cc
workR/Optis_2.0/backup2.0/1.6kk2/: out_norm.txt
workR/Optis_2.0/backup2.0/1.6kk3/: out_norm.txt
workR/Optis_2.0/final-results/: .regr.txt.swp  regr.txt
workR/all_1/: OptiResults.cc  out_norm.txt
workR/hfl+glu_1/: OptiResults.cc  out_norm.txt
workR/ly_3_864/: OptiResults.cc  out_norm.txt
workR/src/: biorob_main.cc  def_main.hh  eval_main.cc  main.cc  mpi_main.cc  simu_run.cc
workR/src/conf/: cmake_define.h.in
(+880 files in other folders)
